# celery-fastapi-blueprint

./: Dockerfile  Dockerfile.flower  Dockerfile.worker  README.MD  celery-manager.service.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: tasks.py
app/tasks/: example.py
celery_app/: celery.py  manager.py
config/: flowerconfig.py
scripts/: run_manager.sh
