[project]
name = "celery-fastapi-blueprint"
version = "0.1.0"
description = ""
authors = [
    {name = "Viktor Nizhenets",email = "viktor.nizhenets@meduzzen.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "redis (>=5.2.1,<6.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "flower (>=2.0.1,<3.0.0)",
    "celery[redis] (>=5.4.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
